update ws2122 & presets

--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -36,7 +36,7 @@
       <div class="headerItem"><p>Dienstag</p></div>
       <div class="item"><p class="placeholderTxt">SE Pr</p></div>
       <div class="item"><p class="placeholderTxt">Ü SE / SE Pr</p></div>
-      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
+      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt">SE Pr</p></div>
       <div class="item"></div>
       <div class="item"></div>
@@ -46,7 +46,7 @@
       <div class="item"><p class="placeholderTxt">SE Pr</p></div>
       <div class="item"><p class="placeholderTxt">Ü M* (1)</p></div>
       <div class="item"><p class="placeholderTxt">Ü M* (4) / Ü SE / SE Pr*</p></div>
-      <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
+      <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt">Ü KOG</p></div>
       <div class="item"></div>
     </div>
@@ -54,8 +54,8 @@
       <div class="headerItem"><p>Donnerstag</p></div>
       <div class="item"></div>
       <div class="item gkk"><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
-      <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="#"><i class="fas fa-video"></i></a></div>
+      <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt">Ü M* (5)</p></div>
       <div class="item"><p class="placeholderTxt">Ü M* (6)</p></div>
     </div>
@@ -78,9 +78,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Rechnerarchitektur</p>
-        <a class="moduleLink lr" href="">Lernraum</a>
-        <a class="moduleLink lrplus" href="">Lernraum+</a>
-        <a class="moduleLink video" href="">Panopto</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11124">Lernraum+</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Datenbanken</p>
@@ -92,7 +90,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Mathe Vertiefung</p>
-        <a class="moduleLink" href="">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10376">Lernraum+</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Künstliche Kognition</p>
