updating ws2122 page

--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -25,44 +25,44 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item"><p class="placeholderTxt">Ü DB</p></div>
-      <div class="item"><p class="placeholderTxt">Ü SE</p></div>
-      <div class="item"><p class="placeholderTxt">Ü ML / SE Pr</p></div>
-      <div class="item"><p class="placeholderTxt">Ü KOG / Ü ML* / Ü SE</p></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (2)</p></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (3)</p></div>
+      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Fragestunde</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item"><p class="placeholderTxt"><s>Ü SE</s></p></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (2) / Ü ML (2) / <s>SE Pr</s></p></div>
+      <div class="item"><p class="placeholderTxt">Ü KOG (2) / Ü ML* (1) / <s>Ü SE</s></p></div>
+      <div class="item"></div>
+      <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item"><p class="placeholderTxt">SE Pr</p></div>
-      <div class="item"><p class="placeholderTxt">Ü SE / SE Pr</p></div>
+      <div class="item"><p class="placeholderTxt"><s>SE Pr</s></p></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (1) / Ü SE (2) / <s>SE Pr</s></p></div>
       <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">SE Pr</p></div>
+      <div class="item"><p class="placeholderTxt">SE Pr (1)</p></div>
       <div class="item"></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
-      <div class="item"><p class="placeholderTxt">SE Pr</p></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (1)</p></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (4) / Ü SE / SE Pr*</p></div>
+      <div class="item"><p class="placeholderTxt"><s>SE Pr</s></p></div>
+      <div class="item"></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (4) / Ü SE (1) / SE Pr* (2)</p></div>
       <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">Ü KOG</p></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (3) / Ü KOG (1)</p></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
-      <div class="item"></div>
+      <div class="item"><p class="placeholderTxt"><s>Ü RA</s></p></div>
       <div class="item gkk"><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
       <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (5)</p></div>
-      <div class="item"><p class="placeholderTxt">Ü M* (6)</p></div>
+      <div class="item"><p class="placeholderTxt"><s>Ü RA</s></p></div>
+      <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
-      <div class="item"><p class="placeholderTxt">Ü DB* / Ü KOG / Ü SE</p></div>
+      <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Übungen</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item"></div>
       <div class="item"></div>
@@ -78,6 +78,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Rechnerarchitektur</p>
+        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/WS2122/techinf1/index.html">TechFak</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11124">Lernraum+</a>
       </div>
       <div class="moduleItem">
