updating ws2122 page

--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Fragestunde</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item redMarked"><p class="placeholderTxt"><s>Ü SE / SE Pr / Ü ML (3)</s></p></div>
       <div class="item greenMarked"><p class="placeholderTxt">Ü ML (1) / SE Pr (2) / <s>Ü RA*</s></p></div>
       <div class="item greenMarked"><p class="placeholderTxt">Ü KOG (1) / Ü ML (2) / <s>Ü SE</s></p></div>
@@ -38,7 +38,7 @@
       <div class="headerItem"><p>Dienstag</p></div>
       <div class="item greenMarked"><p class="placeholderTxt"><s>SE Pr</s></p></div>
       <div class="item dotMarked"><p class="placeholderTxt">Ü RA (1)* /<s> Ü SE (2) / SE Pr</s></p></div>
-      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item greenMarked"><p class="placeholderTxt">Ü SE (1) / SE Pr (1)</p></div>
       <div class="item"></div>
@@ -101,7 +101,8 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Maschinelles Lernen</p>
-        <a class="moduleLink" href="">Lernraum</a>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/40704/Start.aspx">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10999">Lernraum+</a>
       </div>
     </div>
     <!--Punkte-->
