--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -12,8 +12,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body onload="readRequest(false)">
-<p class="info">* = Online,
-  umrandet = präsenz, dotted = entweder präsenz / online, rot = präsenz direkt vor/nach online, grün = passt zeitlich<br>Durchgestrichen = passt eigentlich nicht</p>
   <!--"Stundenplan"-->
   <div class="table">
     <div class="leftRow">
@@ -27,36 +25,36 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item redMarked"><p class="placeholderTxt"><s>Ü SE / SE Pr / Ü ML (3)</s></p></div>
-      <div class="item greenMarked"><p class="placeholderTxt">Ü ML (1) / SE Pr (2) / <s>Ü RA*</s></p></div>
-      <div class="item greenMarked"><p class="placeholderTxt">Ü KOG (1) / Ü ML (2) / <s>Ü SE</s></p></div>
+      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
+      <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML (3)</s></p></div>
+      <div class="item greenMarked">Ü ML (1)<p class="placeholderTxt"><s>SE Pr / Ü RA*</s></p></div>
+      <div class="item greenMarked">Ü KOG (1)<p class="placeholderTxt"><s>Ü ML (2)</s></p></div>
       <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML</s></p></div>
       <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item greenMarked"><p class="placeholderTxt"><s>SE Pr</s></p></div>
-      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (1)* /<s> Ü SE (2) / SE Pr</s></p></div>
-      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item greenMarked"><p class="placeholderTxt"><s>SE Pr (2)</s></p></div>
+      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (2)* /<s>SE Pr</s></p></div>
+      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item greenMarked"><p class="placeholderTxt">Ü SE (1) / SE Pr (1)</p></div>
+      <div class="item greenMarked">SE Pr (1)</div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
       <div class="item"></div>
-      <div class="item"></div>
-      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (2)* /  <s>Ü SE (3)</s></p></div>
+      <div class="item"><p class="placeholderTxt">Ü SE (3)</p></div>
+      <div class="item dotMarked">Ü RA (1)*<p class="placeholderTxt"> <s>Ü SE</s></p></div>
       <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (3)* / <s>Ü KOG (2)</s></p></div>
+      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (3)* / <s>Ü KOG (2) / Ü SE</s></p></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
       <div class="item gkk"><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
       <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
       <div class="item"></div>
@@ -65,8 +63,8 @@
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
       <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Übungen</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item"></div>
-      <div class="item"></div>
+      <div class="item"><p class="placeholderTxt">Ü SE (2)</p></div>
+      <div class="item">Ü SE (1)</div>
       <div class="item"></div>
     </div>
   </div>
@@ -81,6 +79,7 @@
       <div class="moduleItem">
         <p class="moduleTitle">Rechnerarchitektur</p>
         <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/html/teaching/WS2122/techinf1/index.html">TechFak</a>
+        <a class="moduleLink techfak" href="https://www.ti.uni-bielefeld.de/downloads/WS2122/techinf1/VIDEOCAPTURE/ra_videos_weekly.html">Videos (mit PW)</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11124">Lernraum+</a>
       </div>
       <div class="moduleItem">
@@ -89,7 +88,9 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Software Engineering</p>
-        <a class="moduleLink" href="">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11465">LR+ Vorlesung</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11464">LR+ Tutorium</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11466">LR+ Seminar</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Mathe Vertiefung</p>
@@ -112,6 +113,9 @@
         <p class="scalaTitle">template</p>
         <p class="scalaPercentage">50%</p>
       </div>-->
+    </div>
+    <div class="notes" id="notes">
+      Keine Notizen<br>( ͡ ͡° ͜ ʖ ͡ ͡°)<br>╭☞ ╭☞
     </div>
   </section>
 
