--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -30,7 +30,7 @@
       <div class="item greenMarked">Ü ML (1)<p class="placeholderTxt"><s>SE Pr / Ü RA*</s></p></div>
       <div class="item greenMarked">Ü KOG (1)<p class="placeholderTxt"><s>Ü ML (2)</s></p></div>
       <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML</s></p></div>
-      <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item tut matheTut"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
@@ -62,7 +62,7 @@
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
-      <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Übungen</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item tut databTut"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt">Ü SE (2)</p></div>
       <div class="item">Ü SE (1)</div>
       <div class="item"></div>
@@ -104,6 +104,7 @@
         <p class="moduleTitle">Maschinelles Lernen</p>
         <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/40704/Start.aspx">Lernraum</a>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10999">Lernraum+</a>
+        <a class="moduleLink video" href="https://uni-bielefeld.cloud.panopto.eu/Panopto/Pages/Sessions/List.aspx#folderID=%22c1b650fe-62e1-40f7-ab98-ada500b5a837%22">Videos</a>
       </div>
     </div>
     <!--Punkte-->
