--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -25,18 +25,18 @@
     </div>
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
-      <div class="item ra"><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
+      <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
       <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML (3)</s></p></div>
       <div class="item greenMarked">Ü ML (1)<p class="placeholderTxt"><s>SE Pr / Ü RA*</s></p></div>
       <div class="item greenMarked">Ü KOG (1)<p class="placeholderTxt"><s>Ü ML (2)</s></p></div>
       <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML</s></p></div>
-      <div class="item tut matheTut"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
       <div class="item greenMarked"><p class="placeholderTxt"><s>SE Pr (2)</s></p></div>
       <div class="item dotMarked"><p class="placeholderTxt">Ü RA (2)* /<s>SE Pr</s></p></div>
-      <div class="item gml"><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
+      <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
       <div class="item greenMarked">SE Pr (1)</div>
       <div class="item"></div>
@@ -46,23 +46,23 @@
       <div class="item"></div>
       <div class="item"><p class="placeholderTxt">Ü SE (3)</p></div>
       <div class="item dotMarked">Ü RA (1)*<p class="placeholderTxt"> <s>Ü SE</s></p></div>
-      <div class="item mathe"><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
+      <div class="item mathe"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
       <div class="item dotMarked"><p class="placeholderTxt">Ü RA (3)* / <s>Ü KOG (2) / Ü SE</s></p></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Donnerstag</p></div>
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
-      <div class="item gkk"><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC</p></div>
-      <div class="item softw"><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item datab"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item gkk"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/97844339936?pwd=VTZlS0ZHcHZ4YkxaQStjVW9kK1E4dz09"><i class="fas fa-video"></i></a></div>
+      <div class="item softw"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
+      <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
-      <div class="item tut databTut"><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt">Ü SE (2)</p></div>
       <div class="item">Ü SE (1)</div>
       <div class="item"></div>
@@ -98,7 +98,9 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Künstliche Kognition</p>
-        <a class="moduleLink" href="">Lernraum</a>
+        <a class="moduleLink lr" href="https://bis.uni-bielefeld.de/sites/42103/Start.aspx">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11690">LR+ Vorlesung</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11729">LR+ Tutorium</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Maschinelles Lernen</p>
