removing stuff & changing basics

--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <!-- (C) 2021 Noah Schütte -->
 <html lang="en" dir="ltr">
   <head>
+    <!-- META -->
     <meta charset="utf-8">
-    <title>Noah Schütte</title>
+    <title>Noah Schütte - noahschuette.de</title>
     <meta name="description" content="I am Noah, a hobby programmer from Germany. I like to develope Indie Games in Unity and other stuff."/>
     <meta name="keywords" content="Noah Schütte, Noah Schütte Bielefeld, n0j0games, noahschuette, n0j0">
+    <link rel="icon" href="images/logo.png">
+    <!-- CSS -->
     <link href="style.css" rel="stylesheet" type="text/css"/>
     <link href="mobile.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Google Font "Chakra Petch" Import -->
+    <!--Google Font & FontAwesome Imports -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="icon" href="images/logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
+    <!-- Scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
-    <!--<script src="cookiedisabler.js"></script>-->
-
 
   </head>
-  <body> <!--onload="loadCookie()"-->
+  <body>
 
     <section id="header" class="secHead">
       <div class="divLogo">
@@ -31,10 +32,10 @@
         </div>
       </div>
       <div class="divSocials">
-        <a id="twitter" href="https://twitter.com/_n0j0" target="_blank"><!--<span>twitter</span>--><i class="fab fa-twitter"></i></a>
-        <a href="https://www.youtube.com/channel/UCwU3dOh4j2MM2LluEaW059w" target="_blank"><!--<span>twitter</span>--><i class="fab fa-youtube"></i></a>
-        <a id="github" href="https://github.com/n0j0games" target="_blank"><!--<span>github</span>--><i class="fab fa-github"></i></a>
-        <a href="https://n0j0games.itch.io" target="_blank"><!--<span>my games</span>--><i class="fab fa-itch-io"></i></a>
+        <a id="twitter" href="https://twitter.com/_n0j0" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.youtube.com/channel/UCwU3dOh4j2MM2LluEaW059w" target="_blank"><i class="fab fa-youtube"></i></a>
+        <a id="github" href="https://github.com/n0j0games" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://n0j0games.itch.io" target="_blank"><i class="fab fa-itch-io"></i></a>
         <a href="https://dribbble.com/n0j0" target="_blank"><i class="fab fa-dribbble"></i></a>
         <a href="https://www.artstation.com/n0j0" target="_blank"><i class="fab fa-artstation"></i></a>
       </div>
@@ -50,12 +51,6 @@
               <a href="https://n0j0games.github.io/smashteroid">Smashteroid</a>
             </div>
           </div>
-          <!--<div onclick="window.location='https://n0j0games.github.io/';" id="proj2" class="divProject" style="cursor: pointer;" >
-            <div id="pfooter2" class="divFooter">
-              <a href="https://n0j0games.github.io/">Games & Prototypes</a>
-              <p id="sub1" class="pDescription">Games & Prototypes</p>
-            </div>
-          </div>-->
           <div onclick="window.location='https://palettebin.noahschuette.de';" id="proj4" class="divProject" style="cursor: pointer;" >
             <div id="pfooter1" class="divFooter">
               <a href="https://palettebin.noahschuette.de">Palettebin</a>
@@ -63,16 +58,9 @@
           </div>
           <div onclick="window.location='https://noahschuette.github.io/minitxt/';" id="proj5" class="divProject" style="cursor: pointer;" >
             <div id="pfooter5" class="divFooter">
-              <a href="https://palettebin.noahschuette.de">minitxt</a>
+              <a href="https://noahschuette.github.io/minitxt/">minitxt</a>
             </div>
           </div>
-          <!--
-          <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" id="proj1" class="divProject" style="cursor: pointer;" >
-            <div id="pfooter1" class="divFooter">
-              <a href="https://github.com/n0j0games/performancemonitor">Performance Monitor</a>
-              <p id="sub1" class="pDescription">Track your CPU and RAM performance in a small Desktop widget</p>
-            </div>
-          </div>-->
         </div>
       </div>
 
@@ -89,20 +77,22 @@
             <h4>Bielefeld, Germany</h4>
             <h3>I study</h3>
             <h4>computer science & cognitive systems</h4>
-            <h4><b>at</b> Universität Bielefeld</h4>
+            <h4><b>at</b> Bielefeld University</h4>
           </div>
           <div class="aboutRight">
             <h3>Languages:</h3>
             <h4>C#, Java, HTML/CSS,<br>JS, Haskell, Python</h4>
-            <h3>IDEs & Tools:</h3>
-            <h4>Unity Engine, Intellij IDEA,<br>Visual Studio, Atom</h4>
-            <h3>Art/UI Tools:</h3>
-            <h4>Piskel, Figma<br>GIMP 2, MagicaVoxel</h4>
+            <h3>Frameworks & Engines:</h3>
+            <h4>Unity Engine, <br>(NodeJS, Electron)</h4>
+            <h3>IDEs:</h3>
+            <h4>Intellij IDEA, Visual Studio, <br>WebStorm</h4>
+            <h3>Tools:</h3>
+            <h4>Piskel, Figma, Atom</h4>
           </div>
         </div>
 
         <div class="bottom">
-          <p>info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
+          <p>Contact: info<i class="fas fa-at"></i>noahschuette.de</p> <span>&#8226;</span> <a href="https://twitter.com/_n0j0">Twitter</a>
         </div>
 
       </div>
@@ -112,7 +102,7 @@
     <!-- scroll -->
 
     <div class="scroll">
-      <a href="#wazzzzzup"> <img src="images/scroll.png"></a>
+      <a href="#wazzzzzup"> <img src="images/scroll.png" alt="scroll"></a>
     </div>
 
     <!-- Cookies -->
@@ -139,22 +129,3 @@
   </body>
 </html>
 <!--updatetick02-->
-
-<!--
-<section id="g" class="secGames">
-  <p class="txtHeader"><span>/</span>games</p>
-  <div class="gamesBg">
-    <div class="gamesImgHolder">
-      <img class="gamesImg" src="images/n0j0games.png" alt="">
-    </div>
-    <div onclick="window.location='https://n0j0games.github.io';" class="toGamesPage" style="cursor: pointer;">
-      <p class="gamesTitle">n0j0games.github.io</p>
-    </div>
-  </div>
-</section>-->
-<!--
-<section class="secGames">
-  <p class="txtHeader"><span>/</span>games</p>
-  <div onclick="window.location='https://github.com/n0j0games/performancemonitor';" class="gameBar" style="cursor: pointer;" >
-  </div>
-</section>-->
