--- a/palettebin/library.html
+++ b/palettebin/library.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Palettebin</title>
+    <title>Palettebin Library - noahschuette.de</title>
     <link rel="shortcut icon" href="iconNewRound.png">
     <meta name="description" content="View and create color palettes that can be viewed through a simple link. Palettes can be created by hand or via a custom generator. There is also a library with a lot of good palettes you can use.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
