--- a/minitxt/index.html
+++ b/minitxt/index.html
@@ -2,8 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>minitxt</title>
+    <title>minitxt - noahschuette.de</title>
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
