--- a/monthlymoney/index.html
+++ b/monthlymoney/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <!-- Title & Icon -->
-  <title>monthly.money</title>
-  <link rel="shortcut icon" href="icon.png">
+  <title>monthly.money - noahschuette.de</title>
+  <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
   <!-- Meta -->
   <meta name="description" content="">
   <meta charset="utf-8">
