--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WS21/22 Links</title>
-  <link rel="shortcut icon" href="icon.png">
+  <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -26,28 +26,28 @@
     <div class="row">
       <div class="headerItem"><p>Montag</p></div>
       <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
-      <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML (3)</s></p></div>
-      <div class="item greenMarked">Ü ML (1)<p class="placeholderTxt"><s>SE Pr / Ü RA*</s></p></div>
-      <div class="item greenMarked">Ü KOG (1)<p class="placeholderTxt"><s>Ü ML (2)</s></p></div>
-      <div class="item redMarked"><p class="placeholderTxt"><s>SE Pr / Ü ML</s></p></div>
+      <div class="item"></div>
+      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT</p></div>
+      <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT</p></div>
+      <div class="item"></div>
       <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
-      <div class="item greenMarked"><p class="placeholderTxt"><s>SE Pr (2)</s></p></div>
-      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (2)* /<s>SE Pr</s></p></div>
+      <div class="item"></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (2)*</p></div>
       <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item greenMarked">SE Pr (1)</div>
+      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">VOR ORT?</p></div>
       <div class="item"></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Mittwoch</p></div>
       <div class="item"></div>
-      <div class="item"><p class="placeholderTxt">Ü SE (3)</p></div>
-      <div class="item dotMarked">Ü RA (1)*<p class="placeholderTxt"> <s>Ü SE</s></p></div>
+      <div class="item"></div>
+      <div class="item">Ü RA (1)*</div>
       <div class="item mathe"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99590266069?pwd=clVPQ1R0RFFpZjFTLy9QWXlVenRJQT09"><i class="fas fa-video"></i></a></div>
-      <div class="item dotMarked"><p class="placeholderTxt">Ü RA (3)* / <s>Ü KOG (2) / Ü SE</s></p></div>
+      <div class="item"><p class="placeholderTxt">Ü RA (3)*</p></div>
       <div class="item"></div>
     </div>
     <div class="row">
@@ -63,8 +63,8 @@
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
       <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item"><p class="placeholderTxt">Ü SE (2)</p></div>
-      <div class="item">Ü SE (1)</div>
+      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT?</p></div>
+      <div class="item"></div>
       <div class="item"></div>
     </div>
   </div>
@@ -95,6 +95,7 @@
       <div class="moduleItem">
         <p class="moduleTitle">Mathe Vertiefung</p>
         <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=10376">Lernraum+</a>
+        <a class="moduleLink dropbox" href="https://www.dropbox.com/sh/pezap2y3u3zwqkn/AABCeI_IHB4O5gmcb9-NDz-Ia?dl=0">Dropbox Folien</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Künstliche Kognition</p>
