--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>WS21/22 Links</title>
-  <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
+  <link rel="shortcut icon" href="icon.png">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -55,7 +55,7 @@
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
       <div class="item gkk"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Vorlesung</p><p class="locationTxt">CITEC, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/97844339936?pwd=VTZlS0ZHcHZ4YkxaQStjVW9kK1E4dz09"><i class="fas fa-video"></i></a></div>
       <div class="item softw"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Vorlesung</p><p class="locationTxt">H4, ONLINE</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/99037007233?pwd=S1R0THVDeTFYcnZNNWc3dm5tWFFsZz09"><i class="fas fa-video"></i></a></div>
-      <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item datab"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Vorlesung</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/92498693783?pwd=eklWYU5KQ0Y2RGxjS1UrWXNzck5MZz09"><i class="fas fa-video"></i></a></div>
       <div class="item"><p class="placeholderTxt"><s>Ü RA*</s></p></div>
       <div class="item"></div>
     </div>
