--- a/ws2122/index.html
+++ b/ws2122/index.html
@@ -27,10 +27,10 @@
       <div class="headerItem"><p>Montag</p></div>
       <div class="item ra"><p class="moduleTime">10:15-11:45</p><p class="moduleTxt">Rechnerarchitektur</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/98278914859?pwd=VVNHbGZHVHpFNEN3VUk4Vy9EWDNzdz09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT</p></div>
+      <div class="item tut gmlTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Tutorium</p><p class="locationTxt">T2-233</p></div>
       <div class="item tut gkkTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Künstliche Kognition</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT</p></div>
       <div class="item"></div>
-      <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
+      <div class="item tut matheTut"><p class="moduleTime">18:15-19:45</p><p class="moduleTxt">Vertiefung Mathe</p><p class="subTxt">Tutorium</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/95856138931?pwd=bXNmeXlrK00yOWRCcFZKQ1VNbGpldz09"><i class="fas fa-video"></i></a></div>
     </div>
     <div class="row">
       <div class="headerItem"><p>Dienstag</p></div>
@@ -38,7 +38,7 @@
       <div class="item"><p class="placeholderTxt">Ü RA (2)*</p></div>
       <div class="item gml"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Maschinelles Lernen</p><p class="subTxt">Q&A</p><a class="zoomIcon" href="https://uni-bielefeld.zoom.us/j/94957231520?pwd=bVBwMUVidzZ4SGhrR0srVHViN2tjQT09"><i class="fas fa-video"></i></a></div>
       <div class="item"></div>
-      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">VOR ORT?</p></div>
+      <div class="item tut softwTut"><p class="moduleTime">16:15-17:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Seminar</p><p class="locationTxt">D2-136</p></div>
       <div class="item"></div>
     </div>
     <div class="row">
@@ -62,8 +62,8 @@
     <div class="row">
       <div class="headerItem"><p>Freitag</p></div>
       <div class="item"></div><div class="item"></div>
-      <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">EINZIGE MÖGLICHKEIT</p><a class="zoomIconDisabled" href=""><i class="fas fa-video"></i></a></div>
-      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">VOR ORT?</p></div>
+      <div class="item tut databTut"><p class="moduleTime">12:15-13:45</p><p class="moduleTxt">Datenbanken</p><p class="subTxt">Tutorium</p><p class="locationTxt">V7-140</p></div>
+      <div class="item tut softwTut"><p class="moduleTime">14:15-15:45</p><p class="moduleTxt">Software Engineering</p><p class="subTxt">Tutorium</p><p class="locationTxt">V2-221/222</p></div>
       <div class="item"></div>
       <div class="item"></div>
     </div>
@@ -84,7 +84,7 @@
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Datenbanken</p>
-        <a class="moduleLink" href="">Lernraum</a>
+        <a class="moduleLink lrplus" href="https://lernraumplus.uni-bielefeld.de/course/view.php?id=11379">Lernraum+</a>
       </div>
       <div class="moduleItem">
         <p class="moduleTitle">Software Engineering</p>
@@ -118,11 +118,13 @@
         <p class="scalaPercentage">50%</p>
       </div>-->
     </div>
+    <!--Notes-->
     <div class="notes" id="notes">
       Keine Notizen<br>( ͡ ͡° ͜ ʖ ͡ ͡°)<br>╭☞ ╭☞
     </div>
   </section>
 
+  <!--KW-->
   <p class="kalenderwoche" id="kw">KW 187</p>
 
 </body>
