changing error 404 page

--- a/404.html
+++ b/404.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html lang="en">
+<head>
     <meta charset="utf-8">
-    <title>noahschuette - Error 404</title>
-    <link rel="stylesheet" href="/error.css">
+    <title>Error 404 - noahschuette</title>
+    <link rel="stylesheet" href="error/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <section class="section">
-      <img class="titleimg" src="/images/r2d2.gif" alt="">
-      <p class="title">404</p>
-      <p class="subtitle">NOT FOUND</p>
-      <p class="funnyInfo">"These aren't the droids you are looking for"</p>
-      <p class="info">The page you are looking for has been moved or never existed.</p>
-      <div class="gitHub">
-        <p class="gitHubTxt">Page hosted by GitHub Pages</p>
-        <p class="dash">&mdash;</p>
-        <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
-      </div>
-      <img src="/images/logo.png" alt="">
-    </section>
-  </body>
+    <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
+</head>
+<body>
+
+<div id="scene" data-relative-input="true">
+    <img src="error/space0.png" data-depth='1' class="paramimg" id="img-0"/>
+    <img src="error/space1.png" data-depth='0.7' class="paramimg" id="img-1"/>
+    <img src="error/space2.png" data-depth='0.3' class="paramimg" id="img-2"/>
+    <img src="error/space3.png" data-depth='0.1' class="paramimg" id="img-3"/>
+    <img src="error/space4.png" data-depth='0.05' class="paramimg" id="img-4"/>
+</div>
+
+<section class="section">
+    <p class="title">404</p>
+    <p class="subtitle">NOT FOUND</p>
+    <p class="info">The page you are looking for has been moved or never existed.</p>
+</section>
+
+<div class="gitHub">
+    <p class="gitHubTxt">Page hosted by GitHub Pages</p>
+    <p class="dash">&mdash;</p>
+    <a class="status" href="https://www.githubstatus.com/">GitHub Pages Status</a>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+<script src="parallax.js"></script>
+
+</body>
 </html>
