--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <!-- META -->
     <meta charset="utf-8">
-    <title>Noah Schütte - noahschuette.de</title>
+    <title>Noah Schütte - noahschuette</title>
     <meta name="description" content="I am Noah, a hobby programmer from Germany. I like to develope Indie Games in Unity and other stuff."/>
     <meta name="keywords" content="Noah Schütte, Noah Schütte Bielefeld, n0j0games, noahschuette, n0j0">
     <link rel="icon" href="images/logo.png">
