--- a/minitxt/index.html
+++ b/minitxt/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>minitxt - noahschuette.de</title>
+    <title>minitxt - noahschuette</title>
     <script src="https://kit.fontawesome.com/038f795198.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
