--- a/monthlymoney/index.html
+++ b/monthlymoney/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Title & Icon -->
-  <title>monthly.money - noahschuette.de</title>
+  <title>monthly.money - noahschuette</title>
   <link rel="shortcut icon" href="https://noahschuette.github.io/images/logo.png">
   <!-- Meta -->
   <meta name="description" content="">
